Updated to new Riot API